# orville

./: .gitignore  .travis.yml  Dockerfile  GETTING-STARTED.md  JSON.md  MIGRATION.md  PLAN.md  README.md  SQL-MARSHALLER.md  cabal.config  docker-compose.tools.yml  docker-compose.yml  ghcid  index.html  orville.cabal  package.yaml  stack-gh-pages-haddock.sh  stack-lts-10.0.yml  stack-lts-10.10.yml  stack-lts-11.22.yml  stack-lts-12.13.yml  stack-lts-12.20.yml  stack-lts-13.0.yml  stack-lts-13.3.yml  stack-lts-6.0.yml  stack-lts-6.35.yml  stack-lts-7.22.yml  stack-lts-7.24.yml  stack-lts-8.0.yml  stack-lts-8.24.yml  stack-lts-9.21.yml  stack.yaml  test-loop
.circleci/: config.yml
docs/: Dockerfile  README.md  contact.html  docker-compose.yml  index.html
orville-docsite/: Dockerfile  compose.yml  stack-config.yaml  stack.yaml
orville-docsite/samples/adding-orville-new-readert/: 1-add-readert.patch  2-add-orville-typeclasses.patch  3-update-runApplication.patch  4-update-main.patch  5-add-table.patch  6-add-migrations.patch  adding-orville-new-readert.cabal  expected-output.txt  mkdiffs.sh  run.sh  stack.yaml
orville-docsite/samples/adding-orville-new-readert/snapshots/: Main-1.hs  Main-2.hs  Main-3.hs  Main-4.hs  Main-5.hs  Main-6.hs  Main-7.hs
orville-docsite/samples/hero/: expected-output.txt  hero.cabal  run.sh  stack.yaml
orville-docsite/samples/hero/src/: Main.hs
orville-docsite/samples/using-json/: expected-output.txt  run.sh  using-json.cabal
orville-docsite/samples/using-json/src/: Main.hs
orville-docsite/samples/using-sql-marshaller/: expected-output.txt  run.sh  stack.yaml  using-sql-marshaller.cabal
orville-docsite/samples/using-sql-marshaller/src/: Main.hs
orville-docsite/site-builder/: contact.md  index.md  site-builder.cabal  site.hs
orville-docsite/site-builder/css/: default.css
orville-docsite/site-builder/explanations/: building-sql-expressions.md  fighting-n-plus-one-queries-with-plans.md  handling-failure.md  the-monad-orville-typeclass.md
orville-docsite/site-builder/how-tos/: how-to-add-custom-marshalling-validations.md  how-to-add-orville-to-an-existing-reader-context.md  how-to-add-orville-to-your-application-monad.md  how-to-execute-raw-sql.md  how-to-marshall-a-haskell-record.md  how-to-marshall-a-haskell-sum-type.md  how-to-set-up-an-auto-incrementing-id-column.md
orville-docsite/site-builder/orville-postgresql-legacy-docs/: Database-Orville-PostgreSQL-Plan.html  Database-Orville-PostgreSQL-Raw.html  Database-Orville-PostgreSQL-ResourceT.html  Database-Orville-PostgreSQL.html  doc-index-60.html  doc-index-62.html  doc-index-All.html  doc-index-B.html  doc-index-H.html  doc-index-K.html  doc-index-N.html  doc-index-O.html  doc-index-Q.html  doc-index-V.html  doc-index-W.html  doc-index.html
orville-docsite/site-builder/orville-postgresql-legacy-docs/src/: Database.Orville.PostgreSQL.Conduit.html  Database.Orville.PostgreSQL.Connection.html  Database.Orville.PostgreSQL.Expr.html  Database.Orville.PostgreSQL.Internal.ConstraintDefinition.html  Database.Orville.PostgreSQL.Internal.Expr.Expr.html  Database.Orville.PostgreSQL.Internal.Expr.WhereExpr.html  Database.Orville.PostgreSQL.Internal.FieldDefinition.html  Database.Orville.PostgreSQL.Internal.FieldUpdate.html  Database.Orville.PostgreSQL.Internal.FromClause.html  Database.Orville.PostgreSQL.Internal.GroupBy.html  Database.Orville.PostgreSQL.Internal.MigrateConstraint.html  Database.Orville.PostgreSQL.Internal.MigrateSequence.html  Database.Orville.PostgreSQL.Internal.QueryCache.html  Database.Orville.PostgreSQL.Internal.SchemaState.html  Database.Orville.PostgreSQL.Internal.Select.html  Database.Orville.PostgreSQL.Internal.SelectOptions.html  Database.Orville.PostgreSQL.Internal.SqlType.html  Database.Orville.PostgreSQL.Internal.Types.html  Database.Orville.PostgreSQL.Internal.Where.html  Database.Orville.PostgreSQL.MonadBaseControl.html  Database.Orville.PostgreSQL.Plan.Explanation.html  Database.Orville.PostgreSQL.Popper.html  Database.Orville.PostgreSQL.Raw.html  Database.Orville.PostgreSQL.Select.html  Database.Orville.PostgreSQL.Trigger.html  Database.Orville.PostgreSQL.html
orville-docsite/site-builder/templates/: default.html  post.html
orville-docsite/site-builder/tutorials/: getting-started.md  using-json.md  using-migrations.md  using-plans.md  using-sql-marshaller.md
orville-oracle/: Dockerfile  README.md  docker-compose.yml  haskell-format  orville-oracle.cabal  package.yaml  setup-orville-user-oracle-docker.sh  stack-lts-10.0.yml  stack-lts-11.0.yml  stack-lts-12.13.yml  stack-lts-13.0.yml  stack-lts-13.12.yml  stack-lts-14.0.yml  stack-lts-6.0.yml  stack-lts-7.22.yml  stack-lts-8.0.yml  stack-lts-9.0.yml  test-all  test-loop  tnsnames.ora
orville-postgresql-docs/: Orville-PostgreSQL-AutoMigration.html  Orville-PostgreSQL-ErrorDetailLevel.html  Orville-PostgreSQL-Execution-Cursor.html  Orville-PostgreSQL-Execution-Delete.html  Orville-PostgreSQL-Execution-EntityOperations.html  Orville-PostgreSQL-Execution-Execute.html  Orville-PostgreSQL-Execution-ExecutionResult.html  Orville-PostgreSQL-Execution-Insert.html  Orville-PostgreSQL-Execution-QueryType.html  Orville-PostgreSQL-Execution-ReturningOption.html  (+99 more)
(+1168 files in other folders)
