name:               site-builder
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , attoparsec
                  , bytestring
                  , containers
                  , data-default
                  , dlist
                  , filepath
                  , non-empty-text
                  , pandoc
                  , skylighting
                  , text
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
