cabal-version:       2.2

name:                adding-orville-new-readert
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/flipstone/adding-orville-new-readert#readme
license:             BSD-3-Clause
author:              Flipstone Technology Partners, Inc
maintainer:          maintainers@flipstone.com
copyright:           
category:            sample
build-type:          Simple

executable adding-orville-new-readert
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       orville-postgresql,
                       text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
